# health-tracker

./: .env.docker  .gitignore  DOCKER.md  INSTALLATION.md  QUICKSTART.md  README.md  check_system.sh  docker-compose.yml  migrate_add_food_database.sql  pyproject.toml  run_backend.sh  run_frontend.sh  setup.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: dashboard.py  export.py  food.py  food_database.py  garmin.py  health_event.py  medication.py  notes.py  seizure.py  sickness.py  user.py  water.py
backend/app/services/: export_service.py  garmin_service.py  medication_scheduler.py
backend/app/utils/: encryption.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx
frontend/src/pages/: Dashboard.jsx  Export.jsx  FoodLog.jsx  GarminData.jsx  HealthEvents.jsx  Medications.jsx  Seizures.jsx  Settings.jsx  Sickness.jsx
